  magic 'id attribute. If not specified it defaults to the name. To suppress
  the ID entirely, pass ``id=""``.  This is to help set the ID for title().
  radio() doesn't do this because it generates the ID another way.  hidden()
  doesn't because hidden fields aren't used with labels.
* Bugfix in mt.select(): selected values not being passed as list.

0.6.3 (10/7/2008)
* Bugfix in distribute() found by Randy Syring.
* New helpers title() and required_legend() in webhelpers.html.tags.
* New directory webhelpers/public for static files
* Suggested stylesheet webhelpers/public/stylesheets/webhelpers.css
  (You'll have to manually add this to your application.)

0.6.2 (10/2/2008)
* nl2br() and format-paragraphs were not literal-safe.
* webhelpers.converters:
  - New helper transpose() to turn a 2D list sideways (making the rows columns
    and the columns rows).
* webhelpers.markdown:
  - Upgrade to Markdown 1.7.
  - Add a warning about escaping untrusted HTML to 
    webhelpers.html.converters.markdown() docstring.
  - Did not include Markdown's extensions due to relative import issues.
    Use the full Markdown package if you want footnotes or RSS.
* webhelpers.media:
  - New module for muiltimedia helpers.  Initial functions determine the size
    of an image and choose a scaling factor.
* webhelpers.html.tags:
  - Options tuple contains Option objects for select/checkbox/radio groups.
    select() now uses this automatically.
  - checkbox() and radio() now have a ``label`` argument.
* webhelpers.number:
  - Population standard deviation contributed by Lorenzo Catucci.
* webhelpers.html.form_layout: form field layout (PRELIMINARY, UNSTABLE).

0.6.1 (7/31/2008)
* Include a faster version of cgi.escape for use by the literal object.
* Fixed bug in SimplerXMLGenerator that the FeedGenerator uses, so that
  it doesn't use a {} arg.
* New helpers:
  - nl2br() and format_paragraphs() in webhelpers.html.converters.
  - ul() and ol() in webhelpers.html.tags.