@@ -7,6 +7,7 @@ WebHelpers ChangeLog
   radio() doesn't do this because it generates the ID another way.  hidden()
   doesn't because hidden fields aren't used with labels.
 * Bugfix in mt.select(): selected values not being passed as list.
+* Delete experimental module webhelpers.html.form_layout.
 
 0.6.3 (10/7/2008)
 * Bugfix in distribute() found by Randy Syring.
